🐛 Fix spacing around code blocks with line numbers enabled
Fixes: #987

--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -1307,6 +1307,11 @@ code {
   padding: 0px;
 }
 
+.prose div.chroma {
+  margin-bottom: 1.5rem;
+  margin-top: 1.5rem;
+}
+
 /* LineTable */
 
 .chroma .lntable {
